
- #9344, #9368: Disable exception backtraces in bytecode programs
  built with "-output-complete-exe". At the moment, such programs do
  not embed debug information and exception backtraces where causing
  them to crash.
  (Jérémie Dimino, review by Nicolás Ojeda Bär)

### Bug fixes:

- #9165: Add missing -function-sections and -O3 flags in Makefiles.
  (Greta Yorsh, review by David Allsopp)

OCaml 4.10.0 (21 February 2020)
-------------------------------

(Changes that can break existing programs are marked with a "*")

### Language features

- #7757, #1726: multi-indices for extended indexing operators:
  `a.%{0;1;2}` desugars to `( .%{ ;.. } ) a [|0;1;2|]`
  (Florian Angeletti, review by Gabriel Radanne)

* #1859, #9117: enforce safe (immutable) strings by removing
  the -unsafe-string option by default. This can be overridden by
  a configure-time option (available since 4.04 in 2016):
  --disable-force-safe-string since 4.08, -no-force-safe-since
  between 4.07 and 4.04.
  In the force-safe-string mode (now the default), the return type of the
  String_val macro in C stubs is `const char*` instead of
  `char*`. This change may break C FFI code.
  (Kate Deplaix)


- #6662, #8908: allow writing "module _ = E" to ignore module expressions
  (Thomas Refis, review by Gabriel Radanne)

### Runtime system:

- #8809, #9292: Add a best-fit allocator for the major heap; still
  experimental, it should be much better than current allocation
  policies (first-fit and next-fit) for programs with large heaps,
  reducing both GC cost and memory usage.
  This new best-fit is not (yet) the default; set it explicitly with
  OCAMLRUNPARAM="a=2" (or Gc.set from the program). You may also want
  to increase the `space_overhead` parameter of the GC (a percentage,
  80 by default), for example OCAMLRUNPARAM="o=85", for optimal
  speed.
  (Damien Doligez, review by Stephen Dolan, Jacques-Henri Jourdan,
   Xavier Leroy, Leo White)

* #8713, #8940, #9115, #9143, #9202, #9251: