@@ -4,5 +4,6 @@
 value caml_puts(value s)
 {
   puts(String_val(s));
+  fflush(stdout);
   return Val_unit;
 }
