@@ -1,1 +1,2 @@
 Hello OCaml!
+Program terminated
